--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,16 @@ spring:
   redis:
     host: localhost
     port: 6379
-#  security:
-#    user:
-#      name: user
-#      password: password
+  security:
+    enabled: true
+    user:
+      name: user
+      password: password
+  web:
+    cors:
+      allowed-origins: http://localhost:3000
+      allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+      allow-credentials: true
 #  mongodb:
 #    host: localhost
 #    port: 27017
@@ -25,11 +31,11 @@ spring:
 #      path: /h2-console
 #      settings.trace: false
 #      settings.web-allow-others: false
-#  security:
-#    enabled: false
 springdoc:
   swagger-ui:
     path: /docs
+  api-docs:
+    path: /api-docs
 
 #2   3   4   5   2   3  720
 #2   6   24  120 240 720
