--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.javalearning</groupId>
 	<artifactId>javalearning</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>javalearning</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
